# pomtract-testing

./: README.md  demo.sh  docker-compose.yml  run.sh
consumer-ui/: README.md  jest.config.js  package-lock.json  package.json  vite.config.ts
consumer-ui/pacts/: TenantManagementUI-TenantManagementAPI.json
consumer-ui/src/: App.css  App.tsx
consumer-ui/src/services/: TenantService.pact.test.ts  TenantService.ts
producer/: README.md  main.py  pyproject.toml  storage.py
producer/pacts/: TenantManagementUI-TenantManagementAPI.json
producer/tests/: test_provider.py
provider/: models.py  pyproject.toml  storage.py
provider/http/: metrics.http  tenant-operations.http
provider/tests/: test_provider.py
